hphp/hack/test/typecheck/trait_require_param3.php.exp
File "trait_require_param3.php", line 14, characters 7-8:
Unable to satisfy trait/interface requirement (Typing[4110])
  File "trait_require_param3.php", line 6, characters 25-27:
  Expected `int`
  File "trait_require_param3.php", line 6, characters 25-27:
  This type argument to `Super` must match exactly (it is invariant)
  File "trait_require_param3.php", line 13, characters 26-26:
  But got `T`
File "trait_require_param3.php", line 15, characters 7-8:
Unable to satisfy trait/interface requirement (Typing[4110])
  File "trait_require_param3.php", line 10, characters 25-29:
  Expected `float`
  File "trait_require_param3.php", line 10, characters 25-29:
  This type argument to `Super` must match exactly (it is invariant)
  File "trait_require_param3.php", line 13, characters 26-26:
  But got `T`
